--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing:  border-box;
+  box-sizing: border-box;
 }
 
 body {
-  background-image: linear-gradient(120deg, #f6d365, #fda085);
+  background-image: linear-gradient(120deg, #f6b365, #fda085);
   color: white;
-  font-family: poppins, sans-serif;
+  font-family: "Poppins", sans-serif;
   min-height: 100vh;
 }
 
@@ -29,11 +29,11 @@ form input, form button {
   background: white;
 }
 
-form button {
-    color: #d88771;
-    background: white;
-    cursor: pointer;
-    transition: all 0.3s ease;
+form button{
+  color: #d88771;
+  background: white;
+  cursor: pointer;
+  transition: all 0.3s ease;
 }
 
 form button:hover {
@@ -52,7 +52,7 @@ form button:hover {
   list-style: none;
 }
 
-.todo {
+.todo{
   margin: 0.5rem;
   background: white;
   color: black;
@@ -63,9 +63,11 @@ form button:hover {
   transition: all 0.5s ease;
 }
 
-.todo li {
+.todo li{
   flex: 1;
+
 }
+
 .trash-btn, .complete-btn {
   background: #ff6f47;
   color: white;
@@ -74,6 +76,7 @@ form button:hover {
   cursor: pointer;
   font-size: 1rem;
 }
+
 .complete-btn {
   background: rgb(73, 204, 73);
 }
@@ -91,7 +94,7 @@ form button:hover {
   opacity: 0.5;
 }
 
-.fall{
+.fall {
   transform: translateY(8rem) rotateZ(20deg);
   opacity: 0;
 }
@@ -102,14 +105,12 @@ select {
   appearance: none;
   outline: none;
   border: none;
-
 }
 
 .select {
   margin: 1rem;
   position: relative;
   overflow: hidden;
-
 }
 
 select {
@@ -119,7 +120,7 @@ select {
   padding: 1rem;
 }
 
-.select::after {
+.select::after{
   content: "\25BC";
   position: absolute;
   background: #ff6f47;
@@ -130,7 +131,7 @@ select {
   transition: all 0.3s ease;
 }
 
-select:hover:after {
+.select:hover::after{
   background: white;
   color: #ff6f47;
 }
